--- a/HW1.html
+++ b/HW1.html
@@ -184,7 +184,7 @@ hljs.initHighlightingOnLoad();
 <p><strong>This is your first homework due Tuesday Feb 4.</strong></p>
 
 <ol>
-<li>Use the GEOmetabd package to find all HCV gene expression data using the Illumina platform submitted by an investigator at Yale. This should be done with a single query, showing the title, the GSE accession number, the GPL accession number and the manufacturer and the description of the platform used.</li>
+<li>Use the GEOmetabd package to find all HCV gene expression data using the Illumina platform submitted by an investigator at Yale. This should be done with a single query, showing the title, the GSE accession number, the GPL accession number and the manufacturer and the description of the platform used. </li>
 </ol>
 
 <p><strong>Answer</strong>First we update and install the necessary packages for Bioconductor.</p>
@@ -204,33 +204,125 @@ source(&quot;http://bioconductor.org/biocLite.R&quot;)
 ## Installing package(s) &#39;GEOmetadb&#39; &#39;GEOquery&#39;
 </code></pre>
 
-<pre><code>## Warning: packages &#39;GEOmetadb&#39;, &#39;GEOquery&#39; are in use and will not be installed
-## Warning: installed directory not writable, cannot update packages &#39;doParallel&#39;,
-##   &#39;foreign&#39;, &#39;lattice&#39;, &#39;Matrix&#39;, &#39;mgcv&#39;, &#39;nlme&#39;, &#39;rpart&#39;, &#39;survival&#39;
+<pre><code>## Warning: downloaded length 228765 != reported length 235649
+## Warning: error 1 in extracting from zip file
+## Warning: cannot open compressed file &#39;GEOmetadb/DESCRIPTION&#39;, probable reason &#39;No such file or directory&#39;
+</code></pre>
+
+<pre><code>## Error: cannot open the connection
 </code></pre>
 
 <pre><code class="r">library(GEOmetadb)
+</code></pre>
 
-# This database download is particularly slow, so eval=FALSE for this code
+<pre><code>## Loading required package: GEOquery
+## Loading required package: Biobase
+## Loading required package: BiocGenerics
+## Loading required package: parallel
+## 
+## Attaching package: &#39;BiocGenerics&#39;
+## 
+## The following objects are masked from &#39;package:parallel&#39;:
+## 
+##     clusterApply, clusterApplyLB, clusterCall, clusterEvalQ,
+##     clusterExport, clusterMap, parApply, parCapply, parLapply,
+##     parLapplyLB, parRapply, parSapply, parSapplyLB
+## 
+## The following object is masked from &#39;package:stats&#39;:
+## 
+##     xtabs
+## 
+## The following objects are masked from &#39;package:base&#39;:
+## 
+##     anyDuplicated, append, as.data.frame, as.vector, cbind,
+##     colnames, duplicated, eval, evalq, Filter, Find, get,
+##     intersect, is.unsorted, lapply, Map, mapply, match, mget,
+##     order, paste, pmax, pmax.int, pmin, pmin.int, Position, rank,
+##     rbind, Reduce, rep.int, rownames, sapply, setdiff, sort,
+##     table, tapply, union, unique, unlist
+## 
+## Welcome to Bioconductor
+## 
+##     Vignettes contain introductory material; view with
+##     &#39;browseVignettes()&#39;. To cite Bioconductor, see
+##     &#39;citation(&quot;Biobase&quot;)&#39;, and for packages &#39;citation(&quot;pkgname&quot;)&#39;.
+## 
+## Setting options(&#39;download.file.method.GEOquery&#39;=&#39;auto&#39;)
+## Loading required package: RSQLite
+## Loading required package: DBI
+</code></pre>
+
+<p>Now to get the </p>
+
+<pre><code class="r"># This database download is particularly slow, so eval=FALSE for this code
 # chunk
+getSQLiteFile()
 </code></pre>
 
-<pre><code class="r">getSQLiteFile()
+<pre><code class="r"># Make sure your current working directory contains GEOmetadb.sqlite
+geo_con = dbConnect(SQLite(), &quot;GEOmetadb.sqlite&quot;)
 </code></pre>
 
-<pre><code class="r">geo_con = dbConnect(SQLite(), &quot;GEOmetadb.sqlite&quot;)
+<pre><code class="r"># Join gse and gpl via the gse_gpl table
+res = dbGetQuery(geo_con, &quot;SELECT gse.title, gse.gse, gpl.gpl, gpl.manufacturer, gpl.technology FROM (gse JOIN gse_gpl ON gse.gse = gse_gpl.gse) j JOIN gpl ON j.gpl=gpl.gpl WHERE gpl.manufacturer LIKE &#39;%Illumina%&#39; AND gse.contact LIKE &#39;%Yale%&#39; AND (gse.title LIKE &#39;%HCV%&#39; OR gse.title LIKE &#39;%Hepatitis C%&#39;) &quot;)
+res
 </code></pre>
 
-<pre><code class="r"># Found pubmed_id on the GEO website This query has Illumina and Affymetrix
-# manufacturers
-res = dbGetQuery(geo_con, &quot;SELECT gpl.title, gpl.gpl, gse.gse, gpl.manufacturer, gpl.description FROM (gse JOIN gse_gpl ON gse.gse = gse_gpl.gse) j JOIN gpl ON j.gpl=gpl.gpl WHERE gse.pubmed_id=&#39;23067362&#39;&quot;)
+<pre><code>##                                                                                                          gse.title
+## 1                                               The blood transcriptional signature of chronic HCV [Illumina data]
+## 2                                                               The blood transcriptional signature of chronic HCV
+## 3 Impaired TLR3-mediated immune responses from macrophages of patients chronically infected with Hepatitis C virus
+##    gse.gse  gpl.gpl gpl.manufacturer        gpl.technology
+## 1 GSE40223 GPL10558    Illumina Inc. oligonucleotide beads
+## 2 GSE40224 GPL10558    Illumina Inc. oligonucleotide beads
+## 3 GSE40812 GPL10558    Illumina Inc. oligonucleotide beads
 </code></pre>
 
 <ol>
 <li>Reproduce your above query using the data.table package. Again, try to use a single line of code. [Hint: You first need to convert all db tables to data.table tables].</li>
 </ol>
 
-<pre><code class="r">library(data.table)
+<p><strong>Answer</strong></p>
+
+<pre><code class="r"># Working directory must contain the GEOmetadb.sqlite
+library(data.table)
+
+# Store each table for our query from the db in data.tables
+gse.dt = data.table(dbGetQuery(geo_con, &quot;SELECT gse.title, gse.gse, gse.contact FROM gse&quot;))
+gpl.dt = data.table(dbGetQuery(geo_con, &quot;SELECT gpl.gpl, gpl.manufacturer, gpl.technology FROM gpl&quot;))
+gse_gpl.dt = data.table(dbGetQuery(geo_con, &quot;SELECT gse_gpl.gse, gse_gpl.gpl FROM gse_gpl&quot;))
+
+# Set keys and then join the tables on gse
+setkey(gse.dt, gse)
+setkey(gse_gpl.dt, gse)
+gse_gse_gpl.dt = gse.dt[gse_gpl.dt]
+
+# Set keys and then join the new table and gpl table on gpl
+setkey(gpl.dt, gpl)
+setkey(gse_gse_gpl.dt, gpl)
+merge.gse.gpl.dt = merge(gse_gse_gpl.dt, gpl.dt, all = TRUE)
+
+# The final query for title, accession numbers, manufacturer, platform
+merge.gse.gpl.dt[(title %like% &quot;HCV&quot; | title %like% &quot;Hepatitis C&quot;) &amp; manufacturer %like% 
+    &quot;Illumina&quot; &amp; contact %like% &quot;Yale&quot;]
+</code></pre>
+
+<pre><code>##         gpl      gse
+## 1: GPL10558 GSE40223
+## 2: GPL10558 GSE40224
+## 3: GPL10558 GSE40812
+##                                                                                                               title
+## 1:                                               The blood transcriptional signature of chronic HCV [Illumina data]
+## 2:                                                               The blood transcriptional signature of chronic HCV
+## 3: Impaired TLR3-mediated immune responses from macrophages of patients chronically infected with Hepatitis C virus
+##                                                                                                                                                                                                                                                  contact
+## 1: Name: Christopher Bolen;\tEmail: christopher.bolen@yale.edu;\tLaboratory: Steven Kleinstein;\tDepartment: Pathology;\tInstitute: Yale University;\tAddress: 300 George Street, Suite 505;\tCity: New Haven;\tState: CT;\tZip/postal_code: 06511;\tCountry: USA
+## 2: Name: Christopher Bolen;\tEmail: christopher.bolen@yale.edu;\tLaboratory: Steven Kleinstein;\tDepartment: Pathology;\tInstitute: Yale University;\tAddress: 300 George Street, Suite 505;\tCity: New Haven;\tState: CT;\tZip/postal_code: 06511;\tCountry: USA
+## 3:                      Name: Ruth,R,Montgomery;\tEmail: ruth.montgomery@yale.edu;\tDepartment: Internal Medicine;\tInstitute: Yale University School of Medicine;\tAddress: 300 Cedar St.;\tCity: New Haven;\tState: CT;\tZip/postal_code: 06520;\tCountry: USA
+##     manufacturer            technology
+## 1: Illumina Inc. oligonucleotide beads
+## 2: Illumina Inc. oligonucleotide beads
+## 3: Illumina Inc. oligonucleotide beads
 </code></pre>
 
 </body>
